--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <h1>🌸 Pragya S Bodhi</h1>
+    <h1>Porotta</h1>
     <p>BBA (DBE), IIM Bangalore | Graphic Designer | Content Enthusiast</p>
   </header>
 
